--- a/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
+++ b/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintTop_toTopOf="@id/tv_family_subject" />
 
             <ImageView
-                android:id="@+id/iv_check_traffic"
+                android:id="@+id/iv_check_family"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
